Fix the layout on IE11
The new user interface uses the flexbox box model has it's primary way
to organize the layout. Unfortunately IE have a non-negligible amount
of subtitle and tricky bugs with its flexbox implementation.

This one was about a `flex-grow: 1` element not growing in a container
which size is defined with `min-height`. See the bug in Microsoft bug
tracker for more details:

  https://connect.microsoft.com/IE/feedback/details/802625/

Fixes #225

--- a/client/components/main/layouts.styl
+++ b/client/components/main/layouts.styl
@@ -21,12 +21,12 @@ body
   overflow-y: auto
   display: flex
   flex-direction: column
-  min-height: 100vh
-  overflow: hidden
+  height: 100vh
 
 #content
   position: relative
   flex: 1
+  overflow: hidden
 
 #modal
   position: absolute
